# rsyncservice

./: LICENSE  meson.build  rsyncservice.cpp
bbfile/: rsyncservice_git.bb
